# todo-app-api-rust

./: Cargo.toml  Makefile  READEME.md  compose.yml
migrations/: 20260207094453_create_todos.sql  20260209132641_create_invoices.sql
src/: main.rs
src/domain/models/: invoice.rs  mod.rs  todo.rs
src/domain/repositories/: invoice_repository.rs  mod.rs  todo_repository.rs
src/infrastructure/: db.rs  invoice_repository.rs  mod.rs  todo_repository.rs
src/presentation/handlers/: invoice_handler.rs  mod.rs  todo_handler.rs
src/usecase/: invoice_usecase.rs  mod.rs  todo_usecase.rs
